[gd_scene load_steps=6 format=2]

[ext_resource path="res://Brick.png" type="Texture" id=1]
[ext_resource path="res://Giraffe.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=3]
rough = true

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 64 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.95861, 7.26169 )

[node name="Giraffe" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
jump_speed = 200

[node name="Body" type="RigidBody2D" parent="."]
rotation = -0.000736529
collision_layer = 0
mass = 20.0
physics_material_override = SubResource( 3 )
gravity_scale = 10.0
contacts_reported = 1

[node name="Sprite" type="Sprite" parent="Body"]
scale = Vector2( 12, 8 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
shape = SubResource( 1 )

[node name="Catapult" type="Position2D" parent="Body"]
position = Vector2( 80, -60 )
rotation = -1.26885

[node name="NeckBody" type="KinematicBody2D" parent="Body/Catapult"]
position = Vector2( 80, 0 )
scale = Vector2( 12, 1 )
collision_layer = 0
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Body/Catapult/NeckBody"]
z_index = -1
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Catapult/NeckBody"]
shape = SubResource( 2 )

[node name="LaunchPoint" type="Position2D" parent="Body/Catapult"]
position = Vector2( 180, 0 )
rotation = 1.5708
[connection signal="body_entered" from="Body" to="." method="_on_Body_body_entered"]
